<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.eugene.feelings.MainActivity">

    <Spinner
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:id="@+id/spinner"
        android:entries="@array/moods_spinner"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        android:layout_marginTop="8dp">

        <RadioButton
            android:text="@string/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton" />

        <RadioButton
            android:text="@string/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2" />

        <RadioButton
            android:text="@string/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton3" />
    </RadioGroup>

    <CheckBox
        android:text="@string/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox1"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        android:layout_marginTop="8dp"
        android:layout_marginStart="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="40dp" />

    <CheckBox
        android:text="@string/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox3"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="40dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="40dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        android:layout_marginTop="8dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/name_edit"
        android:ems="10"
        android:id="@+id/nameEditText"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:text="@string/feeling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/feelingTextView"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="41dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ToggleButton
        android:text="@string/toggle_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleButton"
        android:textOn="@string/toggle_on"
        android:textOff="@string/toggle_off"
        app:layout_constraintLeft_toLeftOf="@+id/checkBox3"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch1"
        android:textOn="@string/med"
        android:textOff="@string/med"
        android:text="@string/med"
        app:layout_constraintTop_toBottomOf="@+id/checkBox1"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="@+id/checkBox1" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/switch1"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <Button
        android:text="@string/feeling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/feelingTextView"
        android:layout_marginBottom="16dp"
        android:onClick="findMood" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="72dp"
        android:id="@+id/ratingBar"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView" />


</android.support.constraint.ConstraintLayout>
